--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -122,6 +122,9 @@
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <connections>
+                        <segue destination="ieZ-58-nzE" kind="relationship" relationship="rootViewController" id="lDx-Vg-CnA"/>
+                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SLD-UC-DBI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
